tests/asm-link/invalid-macro-arg-symbol/rgbasm.err
error: the symbol `foo` doesn't exist
   ╭─[ test.asm:1:1 ]
   │
 1 │ \<foo>
   │ ───┬──  
   │    ╰──── this symbol is invalid
───╯
1 error generated.
